manifests/eks-demo/manifests/keycloak/keycloak/mokul.yaml
---
# Source: keycloak/charts/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mokul-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-8.9.5
    release: "mokul"
    heritage: "Tiller"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "mokul"

---
# Source: keycloak/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mokul-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.9.5
    release: "mokul"
    heritage: "Tiller"
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "mokul"
    role: master

---
# Source: keycloak/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mokul-keycloak-headless
  labels:
    helm.sh/chart: keycloak-8.1.0
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Tiller
    service: headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"

---
# Source: keycloak/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: mokul-keycloak-http
  labels:
    helm.sh/chart: keycloak-8.1.0
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Tiller
    service: http
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"

---
# Source: keycloak/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: mokul-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.9.5
    release: "mokul"
    heritage: "Tiller"
  annotations:
spec:
  serviceName: mokul-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "mokul"
      role: master
  template:
    metadata:
      name: mokul-postgresql
      labels:
        app: postgresql
        chart: postgresql-8.9.5
        release: "mokul"
        heritage: "Tiller"
        role: master
    spec:      
      securityContext:
        fsGroup: 1001
      containers:
        - name: mokul-postgresql
          image: docker.io/bitnami/postgresql:11.7.0-debian-10-r98
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "keycloak" -d "keycloak" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "keycloak" -d "keycloak" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
              subPath: 
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        

---
# Source: keycloak/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mokul-keycloak
  labels:
    helm.sh/chart: keycloak-8.1.0
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/instance: "mokul"
  replicas: 1
  serviceName: mokul-keycloak-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/instance: "mokul"
      annotations:
        checksum/config-sh: f642ead710d774b0e675069d4ff7eea4fa9d9633af1b3f09fd72c0bf151cf15c
        checksum/config-startup: 928dd5f3b25d3acd32e5589a3642946f62de4e033be52cdd292751c744a6a6c7
    spec:
      restartPolicy: Always
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
        
      containers:
        - name: keycloak
          image: "docker.io/jboss/keycloak:10.0.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            
          command:
            - /scripts/keycloak.sh
          lifecycle:
            # postStart:
            #   exec:
            #     command: ["/bin/sh", "-c", "ls"]
            
          volumeMounts:
            - name: sh
              mountPath: /scripts
              readOnly: true
            - name: secrets
              mountPath: /secrets
              readOnly: true
            - name: startup
              mountPath: /opt/jboss/startup-scripts
              readOnly: true
            - name: realm
              mountPath: "/realm/"
              readOnly: true
            - name: theme
              mountPath: /opt/jboss/keycloak/themes/qliktheme
            
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /auth/
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 5
            
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1
            
          resources:
            {}
            
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: keycloak
                  app.kubernetes.io/instance: "mokul"
                matchExpressions:
                  - key: role
                    operator: NotIn
                    values:
                      - test
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: keycloak
                    app.kubernetes.io/instance: "mokul"
                  matchExpressions:
                    - key: role
                      operator: NotIn
                      values:
                        - test
                topologyKey: failure-domain.beta.kubernetes.io/zone
        
      terminationGracePeriodSeconds: 60
      volumes:
        - name: sh
          configMap:
            name: mokul-keycloak-sh
            defaultMode: 0555
        - name: secrets
          secret:
            secretName: keycloak-secrets
        - name: startup
          configMap:
            name: mokul-keycloak-startup
            defaultMode: 0555
        - name: realm
          secret:
              secretName: keycloak-realm
        - name: theme
          emptyDir: {}
        

---
# Source: keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mokul-keycloak
  labels:
    helm.sh/chart: keycloak-8.1.0
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "mokul"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  rules:
    - host: $(IDP_HOST_NAME)
      http:
        paths:
          - path: /*
            backend:
              serviceName: mokul-keycloak-http
              servicePort: http
---
# Source: keycloak/charts/postgresql/templates/configmap.yaml


---
# Source: keycloak/charts/postgresql/templates/extended-config-configmap.yaml


---
# Source: keycloak/charts/postgresql/templates/initialization-configmap.yaml


---
# Source: keycloak/charts/postgresql/templates/metrics-configmap.yaml


---
# Source: keycloak/charts/postgresql/templates/metrics-svc.yaml


---
# Source: keycloak/charts/postgresql/templates/networkpolicy.yaml


---
# Source: keycloak/charts/postgresql/templates/podsecuritypolicy.yaml


---
# Source: keycloak/charts/postgresql/templates/prometheusrule.yaml


---
# Source: keycloak/charts/postgresql/templates/role.yaml


---
# Source: keycloak/charts/postgresql/templates/rolebinding.yaml


---
# Source: keycloak/charts/postgresql/templates/secrets.yaml

---
# Source: keycloak/charts/postgresql/templates/serviceaccount.yaml


---
# Source: keycloak/charts/postgresql/templates/servicemonitor.yaml


---
# Source: keycloak/charts/postgresql/templates/statefulset-slaves.yaml


---
# Source: keycloak/charts/postgresql/templates/svc-read.yaml


---
# Source: keycloak/templates/poddisruptionbudget.yaml

---
# Source: keycloak/templates/prometheusrules.yaml


---
# Source: keycloak/templates/route.yaml

---
# Source: keycloak/templates/secret-db.yaml

---
# Source: keycloak/templates/secret-keycloak.yaml


---
# Source: keycloak/templates/serviceaccount.yaml

---
# Source: keycloak/templates/servicemonitor.yaml



---
# Source: keycloak/templates/test/configmap-test.yaml


---
# Source: keycloak/templates/test/pod-test.yaml
